# flitz

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  example-config.yml  pyproject.toml
docs/: api.md  conf.py  configuration.md  contributing.md  index.md  installation.md  requirements.txt  usage.md
flitz/: __init__.py  config.py  file_operations.py  main.py
tests/: conftest.py  test_config.py  test_file_operations.py
